# pydantic-slack-client

./: README.md  pyproject.toml  tox.ini
tests/: test_models.py
uw_iti/slack/: client.py  models.py
