[tool.poetry]
name = "pydantic-slack-client"
version = "0.1.0"
description = "A pydanticized implementation of the slack client"
authors = ["Thomas Thorogood <goodtom@uw.edu>"]
license = "MIT"
packages = [
    { include = "uw_iti" }
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
slack-sdk = "^3.15.2"
pytest = "^7.1.1"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
black = "^22.1.0"
pytest = "^7.1.1"
flake8 = "^4.0.1"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
